--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ header {
               border-radius: 5px;
               background-color: #e88100;
               padding: 10px 40px;
-              max-width: 216px;
+              max-width: 100%;
               cursor: pointer;
               padding: 7px 35px;
               margin-left: 10px; }
@@ -255,7 +255,7 @@ header {
               border-radius: 5px;
               background-color: #e88100;
               padding: 10px 40px;
-              max-width: 216px;
+              max-width: 100%;
               cursor: pointer;
               padding: 7px 35px;
               margin-left: 10px; }
@@ -318,6 +318,7 @@ header {
         font-weight: 500;
         font-size: 20px;
         line-height: 112%;
+        color: #939191;
         color: #939191; }
       .beneficios-text .beneficios-text-itens .beneficios-item svg {
         width: 90px; }
@@ -331,7 +332,7 @@ header {
   border-radius: 5px;
   background-color: #e88100;
   padding: 10px 40px;
-  max-width: 216px;
+  max-width: 100%;
   cursor: pointer; }
 
 .button-blue {
@@ -351,6 +352,18 @@ header {
   color: white;
   cursor: pointer; }
 
+.titulo-40px {
+  font-size: 40px;
+  color: white;
+  font-weight: 500;
+  font-weight: bold; }
+
+.p-20px {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 112%;
+  color: #939191; }
+
 .header-content {
   display: flex;
   align-items: center;
@@ -363,6 +376,7 @@ header {
     font-size: 40px;
     color: white;
     font-weight: 500;
+    font-weight: bold;
     max-width: 700px; }
     .header-content .header-content-text .header-content-text-plans {
       display: flex;
@@ -458,7 +472,7 @@ header {
       border-radius: 5px;
       background-color: #e88100;
       padding: 10px 40px;
-      max-width: 216px;
+      max-width: 100%;
       cursor: pointer; }
       .header-content .header-content-text .button-orange b {
         padding: 0 3px; }
@@ -522,6 +536,7 @@ header {
         font-weight: 500;
         font-size: 20px;
         line-height: 112%;
+        color: #939191;
         color: #939191; }
       .beneficios-text .beneficios-text-itens .beneficios-item svg {
         width: 90px; }
@@ -535,7 +550,7 @@ header {
   border-radius: 5px;
   background-color: #e88100;
   padding: 10px 40px;
-  max-width: 216px;
+  max-width: 100%;
   cursor: pointer; }
 
 .button-blue {
@@ -555,6 +570,18 @@ header {
   color: white;
   cursor: pointer; }
 
+.titulo-40px {
+  font-size: 40px;
+  color: white;
+  font-weight: 500;
+  font-weight: bold; }
+
+.p-20px {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 112%;
+  color: #939191; }
+
 .beneficios {
   padding: 30px 0;
   margin-bottom: 120px; }
@@ -567,6 +594,7 @@ header {
       font-size: 40px;
       color: white;
       font-weight: 500;
+      font-weight: bold;
       color: #0099DC;
       padding-bottom: 40px; }
     .beneficios .beneficios-content .beneficios-blocos {
@@ -616,6 +644,7 @@ header {
       font-weight: 500;
       font-size: 20px;
       line-height: 112%;
+      color: #939191;
       color: white; }
     .planos .planos-content .planos-itens-container {
       display: flex;
@@ -652,7 +681,7 @@ header {
           border-radius: 5px;
           background-color: #e88100;
           padding: 10px 40px;
-          max-width: 216px;
+          max-width: 100%;
           cursor: pointer;
           padding: 10px;
           width: 100%; }
@@ -662,51 +691,76 @@ header {
   margin: 0 auto;
   padding: 10px;
   display: flex;
-  align-items: center; }
-  .client-area .client-area-container .client-area-text h2 {
-    font-weight: 600;
-    font-size: 40px;
-    color: white;
-    color: #0099DC;
-    margin-bottom: 20px; }
-  .client-area .client-area-container .client-area-text p {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 112%;
-    color: #939191;
-    margin-bottom: 50px; }
-  .client-area .client-area-container .client-area-text span {
-    font-size: 14px;
-    color: #939191;
-    text-align: center;
-    font-size: 16px; }
-  .client-area .client-area-container .client-area-text .client-area-botoes {
-    display: flex; }
-    .client-area .client-area-container .client-area-text .client-area-botoes .button-off {
-      border: 1px solid white;
-      text-align: center;
-      background: none;
-      border-radius: 5px;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  position: relative; }
+  .client-area .client-area-container img {
+    width: 40%;
+    position: relative;
+    top: 100px; }
+  .client-area .client-area-container .client-area-text {
+    width: 45%; }
+    .client-area .client-area-container .client-area-text h2 {
+      font-weight: 600;
+      font-size: 40px;
       color: white;
-      cursor: pointer;
-      border: 1px solid #0099DC;
       color: #0099DC;
-      padding: 10px 40px; }
-    .client-area .client-area-container .client-area-text .client-area-botoes .button-orange {
-      color: white;
+      margin-bottom: 20px; }
+    .client-area .client-area-container .client-area-text p {
+      font-weight: 500;
+      font-size: 20px;
+      line-height: 112%;
+      color: #939191;
+      color: #939191;
+      margin-bottom: 50px;
+      max-width: 450px; }
+    .client-area .client-area-container .client-area-text span {
+      font-size: 14px;
+      color: #939191;
+      text-align: center;
+      font-size: 16px;
+      padding-left: 20px; }
+    .client-area .client-area-container .client-area-text .client-area-botoes {
       display: flex;
-      align-items: center;
-      justify-content: center;
-      border: none;
-      border-radius: 5px;
-      background-color: #e88100;
-      padding: 10px 40px;
-      max-width: 216px;
-      cursor: pointer;
-      padding: 10px 40px; }
+      justify-content: space-between;
+      margin-top: 20px; }
+      .client-area .client-area-container .client-area-text .client-area-botoes .button-off {
+        border: 1px solid white;
+        text-align: center;
+        background: none;
+        border-radius: 5px;
+        color: white;
+        cursor: pointer;
+        border: 2px solid #0099DC;
+        font-weight: bold;
+        color: #0099DC;
+        width: 265px; }
+      .client-area .client-area-container .client-area-text .client-area-botoes .button-orange {
+        width: 265px; }
+        .client-area .client-area-container .client-area-text .client-area-botoes .button-orange svg {
+          padding: 0 7px; }
 
 .netflix {
-  background-image: url(/images/netflix.png); }
+  background-image: url(/images/netflix.png);
+  background-size: cover;
+  background-position: center;
+  height: 550px; }
+  .netflix .netflix-container {
+    max-width: 1440px;
+    margin: 0 auto;
+    padding: 10px;
+    position: relative; }
+    .netflix .netflix-container h2 {
+      font-size: 40px;
+      color: white;
+      font-weight: 500;
+      font-weight: bold;
+      font-weight: bold;
+      margin-top: 150px; }
+    .netflix .netflix-container img {
+      position: absolute;
+      top: 300px; }
 
 .form-ligacao {
   background: #FDFDFD;
@@ -764,6 +818,7 @@ header {
         font-weight: 500;
         font-size: 20px;
         line-height: 112%;
+        color: #939191;
         color: #939191; }
       .beneficios-text .beneficios-text-itens .beneficios-item svg {
         width: 90px; }
@@ -777,7 +832,7 @@ header {
   border-radius: 5px;
   background-color: #e88100;
   padding: 10px 40px;
-  max-width: 216px;
+  max-width: 100%;
   cursor: pointer; }
 
 .button-blue {
@@ -797,8 +852,129 @@ header {
   color: white;
   cursor: pointer; }
 
+.titulo-40px {
+  font-size: 40px;
+  color: white;
+  font-weight: 500;
+  font-weight: bold; }
+
+.p-20px {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 112%;
+  color: #939191; }
+
+.empresa-bloco {
+  margin-bottom: 120px; }
+  .empresa-bloco .empresa-container {
+    max-width: 1440px;
+    margin: 0 auto;
+    padding: 10px;
+    margin-top: 200px; }
+    .empresa-bloco .empresa-container .bloco2 {
+      height: 20%; }
+    .empresa-bloco .empresa-container .empresa-content-bloco {
+      display: flex;
+      align-items: center;
+      justify-content: space-between; }
+      .empresa-bloco .empresa-container .empresa-content-bloco img {
+        width: 50%;
+        z-index: 20; }
+      .empresa-bloco .empresa-container .empresa-content-bloco .empresa-bloco-text {
+        width: 600px; }
+        .empresa-bloco .empresa-container .empresa-content-bloco .empresa-bloco-text h2 {
+          color: #0099DC;
+          margin-bottom: 20px; }
+        .empresa-bloco .empresa-container .empresa-content-bloco .empresa-bloco-text p {
+          margin: 30px 0 80px 0; }
+        .empresa-bloco .empresa-container .empresa-content-bloco .empresa-bloco-text button {
+          width: 329px;
+          margin-top: 60px; }
+        .empresa-bloco .empresa-container .empresa-content-bloco .empresa-bloco-text .titulo-2 {
+          margin-top: 100px; }
+      .empresa-bloco .empresa-container .empresa-content-bloco img:nth-child(2) {
+        position: relative;
+        top: 100px; }
+
+.blog {
+  background: linear-gradient(85.03deg, #183FA3 -4.4%, #60D4FF 100%);
+  padding: 80px 0;
+  z-index: 1; }
+  .blog .blog-container {
+    max-width: 1440px;
+    margin: 0 auto;
+    padding: 10px; }
+    .blog .blog-container .blog-header {
+      padding: 40px 0;
+      display: flex;
+      justify-content: space-between; }
+    .blog .blog-container .blog-content {
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap; }
+      .blog .blog-container .blog-content .blog-post {
+        background: white;
+        max-width: 370px;
+        box-sizing: border-box;
+        border-radius: 10px;
+        margin-bottom: 20px; }
+        .blog .blog-container .blog-content .blog-post img {
+          max-width: 100%; }
+        .blog .blog-container .blog-content .blog-post .blog-post-text {
+          padding: 0 40px 20px 40px; }
+          .blog .blog-container .blog-content .blog-post .blog-post-text h5 {
+            font-weight: bold;
+            font-size: 16px;
+            padding: 20px 0; }
+          .blog .blog-container .blog-content .blog-post .blog-post-text blockquote {
+            font-weight: 600;
+            font-size: 12px;
+            color: #939191;
+            line-height: 18px;
+            margin-bottom: 30px;
+            text-align: left; }
+          .blog .blog-container .blog-content .blog-post .blog-post-text a {
+            font-weight: 600;
+            font-size: 12px;
+            color: #E88100;
+            text-align: left;
+            text-decoration: underline; }
+
+.fale-conosco {
+  background: #E5E5E5;
+  padding: 40px 0; }
+  .fale-conosco .fale-conosco-container {
+    max-width: 1440px;
+    margin: 0 auto;
+    padding: 10px;
+    display: flex;
+    align-items: center; }
+    .fale-conosco .fale-conosco-container .fale-conosco-text h2 {
+      color: #0099DC;
+      margin-bottom: 20px; }
+    .fale-conosco .fale-conosco-container .fale-conosco-text p {
+      color: #757575; }
+    .fale-conosco .fale-conosco-container .fale-conosco-text .fale-conosco-blocks {
+      margin: 40px 0; }
+    .fale-conosco .fale-conosco-container .fale-conosco-text .fale-conosco-redes {
+      display: flex;
+      align-items: center;
+      max-width: 450px;
+      flex-wrap: wrap; }
+      .fale-conosco .fale-conosco-container .fale-conosco-text .fale-conosco-redes p {
+        margin-right: 20px; }
+      .fale-conosco .fale-conosco-container .fale-conosco-text .fale-conosco-redes svg {
+        padding: 0 20px; }
+    .fale-conosco .fale-conosco-container img {
+      position: absolute;
+      right: 10%;
+      width: 30%; }
+
 body,
 button {
   font-family: 'Poppins', sans-serif; }
+
+body {
+  background: #F1F1F1; }
 
 /*# sourceMappingURL=style.css.map */
