--- a/css/style.scss
+++ b/css/style.scss
@@ -7,8 +7,15 @@
 @import '_client-area';
 @import '_netflix';
 @import '_classes';
+@import '_empresa-bloco';
+@import '_blog';
+@import '_fale-conosco';
 
 body,
 button {
   font-family: 'Poppins', sans-serif;
+}
+
+body {
+  background: #F1F1F1;
 }
