--- a/css/_blog.scss
+++ b/css/_blog.scss
@@ -16,14 +16,18 @@
             display: flex;
             justify-content: space-between;
             flex-wrap: wrap;
-
+            @include tablet{
+                justify-content: center;
+            }
             .blog-post {
                 background: white;
                 max-width: 370px;
                 box-sizing: border-box;
                 border-radius: 10px;
                 margin-bottom: 20px;
-
+                @include tablet{
+                    margin: 20px 10px;
+                }
                 img {
                     max-width: 100%;
                 }
