--- a/css/_client-area.scss
+++ b/css/_client-area.scss
@@ -7,15 +7,25 @@
     flex-wrap: wrap;
     justify-content: space-between;
     position: relative;
-
+@include mobile{
+  justify-content: center;
+}
     img {
       width: 40%;
       position: relative;
       top: 100px;
+      @include mobile{
+        position: initial;
+        width: 100%;
+      }
     }
 
     .client-area-text {
       width: 45%;
+      @include mobile{
+        width: 100%;
+        margin-top: 20px;
+      }
 
       h2 {
         @include titulo-medio;
@@ -36,29 +46,8 @@
         padding-left: 20px;
       }
 
-      .client-area-botoes {
-        display: flex;
-        justify-content: space-between;
-        margin-top: 20px;
-
-
-        .button-off {
-          @include button-off;
-          border: 2px solid $azul;
-          font-weight: bold;
-          color: $azul;
-          width: 265px;
-        }
-
-        .button-orange {
-          width: 265px;
-
-          svg {
-            padding: 0 7px;
-          }
-        }
-      }
 
     }
   }
 }
+
