--- a/css/_fale-conosco.scss
+++ b/css/_fale-conosco.scss
@@ -19,8 +19,19 @@
                 color: #757575;
             }
 
-            .fale-conosco-blocks {
-                margin: 40px 0;
+            .fale-conosco-blocks  {
+                margin: 40px 0 60px 0;
+                .block{
+                    display: flex;
+                    justify-content: space-between;
+                    img{
+                        width: 100px;
+                        height: 100px;
+                        
+                    }
+                    
+                }
+                
             }
 
             .fale-conosco-redes {
@@ -39,10 +50,13 @@
             }
         }
 
-        img {
+        .img-girl {
             position: absolute;
             right: 10%;
-            width: 30%;
+            width: 100%;
+            max-height: 610px;
+            max-width: 400px;
+            height: 100%;
         }
     }
 }
