--- a/css/_mixins.scss
+++ b/css/_mixins.scss
@@ -74,6 +74,12 @@ $degrade:linear-gradient(85.03deg, #183FA3 -4.4%, #60D4FF 100%);
   border-radius: 5px;
   color: white;
   cursor: pointer;
+  transition: 0.5s;
+
+  &:hover {
+    background: rgba(225, 225, 225, 0.5);
+    transition: 0.5s;
+  }
 }
 
 @mixin button-orange() {
@@ -83,10 +89,16 @@ $degrade:linear-gradient(85.03deg, #183FA3 -4.4%, #60D4FF 100%);
   justify-content: center;
   border: none;
   border-radius: 5px;
-  background-color: #e88100;
+  background-color: $laranja;
   padding: 10px 40px;
   max-width: 100%;
   cursor: pointer;
+  transition: 0.5s;
+
+  &:hover {
+    background: lighten($laranja, 10%);
+    transition: 0.5s;
+  }
 }
 
 @mixin button-blue() {
@@ -97,6 +109,12 @@ $degrade:linear-gradient(85.03deg, #183FA3 -4.4%, #60D4FF 100%);
   border: none;
   font-weight: 600;
   cursor: pointer;
+  transition: 0.5s;
+
+  &:hover {
+    background: lighten($azul, 10%);
+    transition: 0.5s;
+  }
 }
 
 
@@ -130,11 +148,13 @@ $degrade:linear-gradient(85.03deg, #183FA3 -4.4%, #60D4FF 100%);
   align-items: center;
   justify-content: space-around;
   padding: 30px;
+  position: absolute;
+bottom: -10%;
 
   h3 {
     font-weight: bold;
     font-size: 20px;
-    color: $azul;
+    color: #186DA3;
     display: flex;
 
     svg {
@@ -190,4 +210,49 @@ $degrade:linear-gradient(85.03deg, #183FA3 -4.4%, #60D4FF 100%);
       }
     }
   }
+}
+
+@mixin client-area-botoes {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+@include tablet(){
+  flex-wrap: wrap;
+  padding: 10px 0
+}
+
+  .button-off {
+    @include button-off;
+    border: 2px solid $azul;
+    font-weight: bold;
+    color: $azul;
+    width: 265px;
+    @include tablet(){
+      margin-bottom: 15px;
+      padding: 10px 40px;
+    }
+  }
+
+  .button-orange {
+    width: 265px;
+
+    svg {
+      padding: 0 7px;
+    }
+
+  }
+}
+
+
+// *MEDIA QUERIES 
+
+@mixin mobile{
+	@media(max-width:600px){
+	@content;
+	}
+}
+@mixin tablet{
+	@media(max-width: 992px){
+	@content;
+	}
 }
