--- a/css/_classes.scss
+++ b/css/_classes.scss
@@ -31,3 +31,70 @@
 .client-area-botoes {
   @include client-area-botoes;
 }
+.header-all-min {
+  height: 500px !important;
+}
+
+
+.modal-planos {
+  display: none;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 10000;
+  background-color: black;
+  background-color: rgba(0, 0, 0, 0.4);
+  transition: 0.3s;
+  
+
+  .modal-container {
+      background: #FFFFFF;
+      box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.15);
+      border-radius: 16px;
+      margin: auto;
+      padding: 60px 100px;
+      position: relative;
+
+      .close-btn {
+          position: absolute;
+          top: -15px;
+          right: 20px;
+          cursor: pointer;
+      }
+
+      .modal-content {
+          @include space-between;
+          flex-direction: column;
+
+          .titulo-40px {
+              color: $azul;
+              padding: 50px 0 20px 0;
+          }
+
+          form {
+              display: flex;
+              flex-direction: column;
+              width: 100%;
+
+              input {
+                  background: #F0F0F0;
+                  border: 1px solid #F0F0F0;
+                  box-sizing: border-box;
+                  border-radius: 7px;
+                  margin: 15px 0;
+                  padding: 10px;
+                  color: $cinza-escuro;
+              }
+
+              .button-blue {
+                  max-width: 500px;
+                  width: 100%;
+                  margin-top: 30px;
+              }
+          }
+      }
+
+  }
+}
