--- a/css/_fale-conosco.scss
+++ b/css/_fale-conosco.scss
@@ -6,7 +6,11 @@
         @include centralizar;
         display: flex;
         align-items: center;
-
+        @include tablet{
+            justify-content: space-around;
+            flex-wrap: wrap-reverse;
+text-align: center;
+        }
 
 
         .fale-conosco-text {
@@ -19,19 +23,21 @@
                 color: #757575;
             }
 
-            .fale-conosco-blocks  {
+            .fale-conosco-blocks {
                 margin: 40px 0 60px 0;
-                .block{
+
+                .block {
                     display: flex;
                     justify-content: space-between;
-                    img{
+
+                    img {
                         width: 100px;
                         height: 100px;
-                        
+
                     }
-                    
+
                 }
-                
+
             }
 
             .fale-conosco-redes {
@@ -57,6 +63,11 @@
             max-height: 610px;
             max-width: 400px;
             height: 100%;
+            @include tablet{
+                width: 40%;
+                padding: 20px;
+                position: initial;
+            }
         }
     }
 }
