--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -15,6 +15,9 @@ footer {
             justify-content: space-between;
             flex-wrap: wrap;
             padding-bottom: 40px;
+            @include tablet{
+                justify-content: space-around;
+            }
 
             .footer-infos {
                 .tel-container {
@@ -24,12 +27,16 @@ footer {
                 p {
                     padding: 10px 0;
                 }
+                @include tablet{
+                    margin-bottom: 20px;
+                }
             }
 
             .footer-links {
                 ul li {
                     padding: 10px;
                 }
+                
             }
 
             .footer-buttons {
@@ -46,6 +53,10 @@ footer {
                     border-color: white;
                     color: white;
                 }
+                @include mobile{
+                    width: 100%;
+                    margin-top: 20px;
+                }
             }
 
         }
@@ -57,5 +68,12 @@ footer {
         align-items: center;
         border-top: 1px solid white;
         padding: 15px 0;
+        @include mobile{
+            flex-wrap: wrap;
+            justify-content: center;
+            p{
+                padding: 20px 0;
+            }
+        }
     }
 }
