--- a/css/_mixins.scss
+++ b/css/_mixins.scss
@@ -4,11 +4,22 @@ $amarelo:#f5e433;
 $cinza-escuro: #939191;
 $laranja: #E88100;
 $degrade:linear-gradient(85.03deg, #183FA3 -4.4%, #60D4FF 100%);
+$shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 
 @mixin centralizar {
   max-width: $width;
   margin: 0 auto;
   padding: 10px;
+}
+
+@mixin space-between{
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  align-items: center;
+  @include tablet(){
+    justify-content: center;
+  }
 }
 
 //* FONTES 
@@ -49,6 +60,9 @@ $degrade:linear-gradient(85.03deg, #183FA3 -4.4%, #60D4FF 100%);
   font-size: 20px;
   line-height: 112%;
   color: $cinza-escuro;
+  @include mobile(){
+    font-size: 15px;
+  }
 }
 
 @mixin titulo-medio {
@@ -75,11 +89,13 @@ $degrade:linear-gradient(85.03deg, #183FA3 -4.4%, #60D4FF 100%);
   color: white;
   cursor: pointer;
   transition: 0.5s;
-
+  max-width: 170px;
+  width: 100%;
   &:hover {
     background: rgba(225, 225, 225, 0.5);
     transition: 0.5s;
   }
+  
 }
 
 @mixin button-orange() {
@@ -91,13 +107,21 @@ $degrade:linear-gradient(85.03deg, #183FA3 -4.4%, #60D4FF 100%);
   border-radius: 5px;
   background-color: $laranja;
   padding: 10px 40px;
-  max-width: 100%;
+  max-width: 300px;
+  max-height: 60px;
+  width: 100%;
   cursor: pointer;
   transition: 0.5s;
 
   &:hover {
     background: lighten($laranja, 10%);
     transition: 0.5s;
+  }
+  b {
+    padding: 0 3px;
+  }
+  @include tablet{
+    margin: 0 auto;
   }
 }
 
@@ -140,7 +164,8 @@ $degrade:linear-gradient(85.03deg, #183FA3 -4.4%, #60D4FF 100%);
 
 @mixin form-ligação {
   background: #FDFDFD;
-  width: 900px;
+  max-width: 900px;
+  width: 100%;
   margin: 0 auto;
   box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.15);
   border-radius: 16px;
@@ -149,7 +174,11 @@ $degrade:linear-gradient(85.03deg, #183FA3 -4.4%, #60D4FF 100%);
   justify-content: space-around;
   padding: 30px;
   position: absolute;
-bottom: -10%;
+  bottom: -10%;
+
+  @include tablet {
+    max-width: 700px;
+  }
 
   h3 {
     font-weight: bold;
@@ -163,6 +192,9 @@ bottom: -10%;
   }
 
   form {
+    @include tablet {
+      display: flex;
+    }
     .input-form-ligacao {
       background: #F0F0F0;
       border: 1px solid #FFFFFF;
@@ -188,10 +220,7 @@ bottom: -10%;
   padding: 0 10px;
 
   .beneficios-text-itens {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    align-items: center;
+    @include space-between();
 
     .beneficios-item {
       display: flex;
@@ -216,10 +245,13 @@ bottom: -10%;
   display: flex;
   justify-content: space-between;
   margin-top: 20px;
-@include tablet(){
-  flex-wrap: wrap;
-  padding: 10px 0
-}
+  @include mobile(){
+    justify-content: center;
+  }
+  @include tablet() {
+    flex-wrap: wrap;
+    padding: 10px 0
+  }
 
   .button-off {
     @include button-off;
@@ -227,7 +259,8 @@ bottom: -10%;
     font-weight: bold;
     color: $azul;
     width: 265px;
-    @include tablet(){
+
+    @include tablet() {
       margin-bottom: 15px;
       padding: 10px 40px;
     }
@@ -246,13 +279,19 @@ bottom: -10%;
 
 // *MEDIA QUERIES 
 
-@mixin mobile{
-	@media(max-width:600px){
-	@content;
-	}
+@mixin mobile {
+  @media(max-width:600px) {
+    @content;
+  }
 }
-@mixin tablet{
-	@media(max-width: 992px){
-	@content;
-	}
+
+@mixin tablet {
+  @media(max-width: 992px) {
+    @content;
+  }
+}
+@mixin desktop {
+  @media(max-width: 1440px) {
+    @content;
+  }
 }
